# Invox

./: .gitignore  README.md  generate_emails.py  update_emails.py
HelpingNotes/: Main.md  (+1 more)
services/invox-ai/: pyproject.toml
services/invox-ai/src/invox/features/email_classification/: categories.py  category_detection.py  service.py  spam_detection.py
services/invox-ai/src/invox/models/experimental/: bart_large_mnli.py  deberta_v3_base_zeroshot.py  distilbart_mnli.py  flan_t5_large.py  nli_distilroberta_base.py  roberta_large_mnli.py
services/invox-ai/src/invox_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/invox-ai/tests/features/email_classification/: generate_dataset.py  test.sh
services/invox-ai/tests/features/email_classification/email_dataset/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+173 more)
services/invox-ai/tests/features/models/: benchmark_models.sh
services/invox-ai/tests/features/models/email_dataset/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  (+11 more)
(+10 files in other folders)
